tests/feat/31.d
for [1, 2, 3, 4, 5] loop print "abc"; end
for i in [1, 2, 3, 4, 5] loop print i; end
for i in {1, 2, 3, b := 4} loop print i; end
for i in "msdkcmsc" loop print i; end  // error
